fixed dark mode

--- a/magdiworks/styles.css
+++ b/magdiworks/styles.css
@@ -80,3 +80,21 @@ footer {
     .highlighted {
       color: grey;
   }
+
+  @media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+    
+    a {
+        color: white;
+    }
+
+    header a {
+        color: white;
+    }
+
+    footer a {
+        color: white;
+    }
