--- a/styles.css
+++ b/styles.css
@@ -90,4 +90,12 @@ footer {
     a {
         color: white;
     }
+
+    header a {
+        color: white;
+    }
+
+    footer a {
+        color: white;
+    }
 }
